# ROS2-HLA

./: .gitattributes  .gitmodules  LICENSE  README.md  prti1516e-free_5_5_10_linux64.sh
GZ_HLA_ws/: verify_bridge.py
GZ_HLA_ws/install/: local_setup.sh  setup.sh
GZ_HLA_ws/install/Prototipo_GZ_HLA/share/Prototipo_GZ_HLA/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
GZ_HLA_ws/log/: latest_build
GZ_HLA_ws/src/Bridge_HLA2ROS2/: README.md  TURTLEBOT4_DEMO.md  package.xml  setup.cfg  setup.py
GZ_HLA_ws/src/Bridge_HLA2ROS2/config/: turtlebot4_config.yaml
GZ_HLA_ws/src/Bridge_HLA2ROS2/src/: undock_adapter.py  universal_bridge.py
GZ_HLA_ws/src/Bridge_HLA2ROS2/tests/: hla_controller.py  mock_turtlesim.py  time_verifier.py  turtlebot4_controller.py
GZ_HLA_ws/src/Prototipo_GZ_HLA/: CMakeLists.txt  package.xml
GZ_HLA_ws/src/Prototipo_GZ_HLA/config/: client_config.yaml  client_robot_1.yaml  client_robot_2.yaml  server_config.yaml
GZ_HLA_ws/src/Prototipo_GZ_HLA/launch/: client.launch.py  server.launch.py
GZ_HLA_ws/src/Prototipo_GZ_HLA/scripts/: pose_to_tf.py  spawn_robot.py  test_pub.py
Pruebas_HLA/: README.md  chatter.py  chatter.xml  inspect_hla.py  listener.py
Pruebas_timers_HLA/: README.md  sine.xml  sine_listener.py  sine_publisher.py
ros2_hla_ws/install/: local_setup.sh  setup.sh
ros2_hla_ws/log/: latest_build
ros2_hla_ws/src/ROS2HLA_Bridge/: README.md  package.xml  setup.cfg  setup.py
ros2_hla_ws/src/ROS2HLA_Bridge/ROS2HLA_Bridge/: bridge_node.py  debug_hla.py  fom_generator.py  hla_manager.py
(+46 files in other folders)
